# spyctl

./: .flake8  .gitignore  Makefile  README.md  TUTORIAL.md  api.py  args.py  cli.py  cmdline_test.py  create_baseline.yaml  diff.py  download_menu.py  fingerprints.py  get.py  manage_menu.py  merge.py  policy_manager.py  prints.py  pyproject.toml  requirements.txt  spyctl
.github/workflows/: api-build-deploy.yaml  api-build-dry-run.yaml  api_build.yaml  api_build_deploy.yaml  api_deploy.yaml  black.yml  publish-to-pypi.yaml  publish-to-test-pypi.yaml  python-package.yml  reusable-build-deploy.yaml  reusable-build-dry-run.yaml  reusable-build.yaml
docs/: conf.py  index.rst  requirements.in  requirements.txt
docs/getting_started/: getting_started.rst  install.rst
docs/source/: conf.py  index.rst
docs/tutorials/: policy_management.rst  spyctl_basics.rst  (+1 more)
scripts/: README.md  agent.py  connection_container53.py  connection_container8126.py  connections53.py  connections8126.py  dns.py
spyct_api/: requirements.txt
spyctl/: api.py  args.py  cache_dict.py  cli.py  create.py  delete.py  diff.py  filter_resource.py  fingerprints.py  get.py  manage.py  merge.py  merge_lib.py  policies.py  schemas.py  schemas_v2.py  search.py  spyctl.py  spyctl_lib.py  spyctl_main.py  upload.py  user_config.py
spyctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spyctl_api/: Dockerfile  Makefile  TestDockerfile  build_requirements.txt  docker-compose.yaml  requirements.in  requirements.txt  test-docker-compose.yaml  test_requirements.txt
(+194 files in other folders)
